--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.upar24.chattingtrading"
         minSdk 23
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 6
+        versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -25,8 +25,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -73,7 +72,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
 
 
-    implementation "androidx.paging:paging-compose:1.0.0-alpha12"
 
     implementation "androidx.compose.runtime:runtime-livedata:1.1.0-alpha01"
     // Compose dependencies
@@ -123,11 +121,4 @@ dependencies {
     // Instrumented Unit Tests
     androidTestImplementation "junit:junit:4.13.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
-//    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-//    androidTestImplementation "com.google.truth:truth:1.1.3"
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
-//    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
-//    androidTestImplementation "io.mockk:mockk-android:1.10.5"
 }
